--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             <div class="front flap"></div>
             <div class="front pocket"></div>
             <div class="letter">
-                <div class="words line1"><a>💐 Happy Valentine's 💐</a></div>
+                <div class="words line1"><a>💐 Congratulations 💐</a></div>
                 <div class="words line2"><a>
-                    💕 I love you 💕
+                    🎊 IG: pxnkatz 🎊
                 </a></div>
                 <div class="words line3"></div>
                 <div class="words line4"></div>
