--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
             <div class="letter">
                 <div class="words line1"><a>💐 Congratulations 💐</a></div>
                 <div class="words line2"><a>
-                    🎊 IG: pxnkatz 🎊
+                    🎊 pxnkatz 🎊
                 </a></div>
-                <div class="words line3"></div>
+                <div class="words line3"><a></a></div>
                 <div class="words line4"></div>
             </div>
             <div class="hearts">
