--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             <div class="front flap"></div>
             <div class="front pocket"></div>
             <div class="letter">
-                <div class="words line1"><a>💐 Congratulations 💐</a></div>
+                <div class="words line1"><a>💐 Happy Brithday To You 💐</a></div>
                 <div class="words line2"><a>
-                    🎊 pxnkatz 🎊
+                    🎊 arischyy 🎊
                 </a></div>
                 <div class="words line3"><a></a></div>
                 <div class="words line4"></div>
